--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 <!-- ===== Header ===== -->
 <header>
-  <img src="images/logo.PNG" alt="logo">
+  <img src="images/logo.png" alt="logo">
 
   <h1
     data-nl="Eethuis Cafetaria Zorgvlied"
